--- a/ZenTuner.xcodeproj/xcshareddata/xcschemes/ZenTuner_watchOS.xcscheme
+++ b/ZenTuner.xcodeproj/xcshareddata/xcschemes/ZenTuner_watchOS.xcscheme
@@ -40,8 +40,10 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/Zen Tuner">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8F3ECCF72682821900415B9F"
@@ -49,7 +51,7 @@
             BlueprintName = "Zen Tuner watchOS"
             ReferencedContainer = "container:ZenTuner.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -57,8 +59,10 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/Zen Tuner">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8F3ECCF72682821900415B9F"
@@ -66,7 +70,16 @@
             BlueprintName = "Zen Tuner watchOS"
             ReferencedContainer = "container:ZenTuner.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "8F3ECCF72682821900415B9F"
+            BuildableName = "Zen Tuner watchOS.app"
+            BlueprintName = "Zen Tuner watchOS"
+            ReferencedContainer = "container:ZenTuner.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
